--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^2.1.3",
-    "vite": "^7.2.4",
-    "vite-plugin-static-copy": "^3.1.4"
+    "vite": "^7.2.4"
   },
   "dependencies": {
     "@zappar/zappar-threejs": "^4.3.0",
